[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/eggs/chicken-bottom.png" type="Texture" id=1]
[ext_resource path="res://assets/eggs/chicken-top.png" type="Texture" id=2]
[ext_resource path="res://assets/objects/lights/light.png" type="Texture" id=3]
[ext_resource path="res://assets/creature/chick.png" type="Texture" id=4]
[ext_resource path="res://src/egg/HatchingAnimation.gd" type="Script" id=5]
[ext_resource path="res://src/egg/Notification.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/theme.tres" type="Theme" id=7]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Creature:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EggContainer/TopHalf:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EggContainer/TopHalf:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("EggContainer/BottomHalf:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("EggContainer/BottomHalf:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "hatch"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("EggContainer/TopHalf:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, -1 ), Vector2( 7, -11 ), Vector2( 19, -13 ), Vector2( 30, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EggContainer/TopHalf:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 5.31003, 24.9695, 75.5578, 172.071 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EggContainer/BottomHalf:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -2.68037, 7.76273 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("EggContainer/BottomHalf:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 1 ), Vector2( 0, 2 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Creature:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("EggContainer/TopHalf:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.9, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("EggContainer/TopHalf:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.9, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.5, 0.5 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Creature:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.8, 1.1, 1.5, 1.8, 2.1, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -3, -6 ), Vector2( -3, -6 ), Vector2( 3, -22 ), Vector2( 2, -4 ), Vector2( 6, -9 ), Vector2( -1, -9 ), Vector2( -1, -4 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Creature:rotation_degrees")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.8, 1.1, 1.5, 1.8, 2.1, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, -8.99005, 0.202285, 9.777, -9.21946, -0.873877 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Creature:z_index")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Creature:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.9, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Background:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Message:rect_position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 1.3, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -36, -49 ), Vector2( -81, -70 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Message:rect_scale")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 1.3, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.447753, 0.557412 ), Vector2( 1, 1 ) ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Message:modulate")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 1.3, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/15/type = "method"
tracks/15/path = NodePath("Notification")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 2.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "superhappy" ],
"method": "activate"
} ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("Flavor:rect_position")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 1.4, 2, 2.7, 3.4, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 211, -68 ), Vector2( 81, -13 ), Vector2( -23, -6 ), Vector2( -145, -16 ), Vector2( -378, -42 ) ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("Flavor:rect_rotation")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 1.4, 2, 2.7, 3.4, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -144.944, -288.625, -344.0, -444.0 ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("Message:visible")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/19/type = "value"
tracks/19/path = NodePath("Flavor:visible")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/20/type = "value"
tracks/20/path = NodePath("ReadyCheck:modulate")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/keys = {
"times": PoolRealArray( 0, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/21/type = "method"
tracks/21/path = NodePath(".")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_sound"
} ]
}
tracks/22/type = "value"
tracks/22/path = NodePath("ReadyCheck:visible")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/imported = false
tracks/22/enabled = true
tracks/22/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="HatchingAnimation" type="Node2D"]
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -357.0
margin_top = -268.0
margin_right = -317.0
margin_bottom = -228.0
rect_scale = Vector2( 18.306, 12.929 )
color = Color( 0, 0, 0, 0.337255 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/hatch = SubResource( 1 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
rotation = 6.28319
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="Creature" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -3, -6 )
texture = ExtResource( 4 )

[node name="EggContainer" type="Node2D" parent="."]
position = Vector2( -3, -8 )

[node name="TopHalf" type="Sprite" parent="EggContainer"]
texture = ExtResource( 2 )

[node name="BottomHalf" type="Sprite" parent="EggContainer"]
texture = ExtResource( 1 )

[node name="Message" type="Label" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = -36.0
margin_top = -49.0
margin_right = 130.0
margin_bottom = -3.8147e-06
rect_scale = Vector2( 0.447753, 0.557412 )
theme = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "You hatched chicken!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReadyCheck" type="Label" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = -81.0
margin_top = 18.0
margin_right = 87.0
margin_bottom = 67.0
theme = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Ready for the next one?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notification" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( 7, -11 )
z_index = 2

[node name="Flavor" type="Label" parent="."]
visible = false
margin_left = 189.333
margin_top = -58.8333
margin_right = 277.333
margin_bottom = -42.8333
rect_rotation = -24.1573
theme = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "BOOORING!!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
